# docstore

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/jupyterlab/: Dockerfile
docstore/extract/: input.py  models.py
notebooks/: docling_chunking.ipynb  elasticsearch-connection.ipynb  read_html_properties.ipynb  read_htmls.ipynb  request_search_filter.ipynb  test_db_contents.ipynb
